# hairpin-vortex-extraction

./: README.md  requirements.txt
clustering/: clustering.py
full_data/: bernardTree_clusters.txt  cylinderTree.json  cylinderTree_clusters.txt
splitting/: CMakeLists.txt  README.md
splitting/misc/: CMakeLists.txt
splitting/src/compute_histogram/: CMakeLists.txt  Compute_Histogram.cpp
splitting/src/convert_dataset/: CMakeLists.txt  Convert_Dataset.cpp
splitting/src/create_full_dataset/: CMakeLists.txt  Create_Full_Dataset.cpp
splitting/src/extract_skeleton/: CMakeLists.txt  Extract_Skeleton.cpp
splitting/src/profile_construction/: CMakeLists.txt  Profile_Construction.cpp
splitting/src/region_growing/: CMakeLists.txt  Region_Growing.cpp  myConnectivityFilter.cxx  myConnectivityFilter.h
splitting/src/region_simplification/: CMakeLists.txt  Region_Simplification.cpp
splitting/src/region_splitting/: CMakeLists.txt  Region_Splitting.cpp  myPolyDataConnectivityFilter.cxx  myPolyDataConnectivityFilter.h
splitting/src/skeleton_extraction/: CMakeLists.txt  Skeleton_Extraction.cpp
splitting/src/vortex_statistics/: CMakeLists.txt  Vortex_Statistics.cpp
vis_sys/: pcp.html  pyecharts_QtWebEngine.py  scatter.html  tree.html
